2.23.91:

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Button: undeprecated the clicked() method.

	* gtk/src/button.hg: gtk_button_clicked() is not deprecated. Fix that 
	mistake.
	Thanks to Aurimas Černius.

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Image: Added constructor and a const-correct set(IconSet, size) method.

	* gtk/src/image.[hg|ccg]: set(IconSet, size): Deprecate the existing one 
	because it takes a non-const IconSet&, adding a correct method overload.
	Likewise, deprecate and replace the corresponding constructor.
	We use IconSet via RefPtr in gtkmm 3 anyway, so we have already fixed this 
	problem there.

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Pixbuf: Minor documentation improvement.

	* gdk/src/pixbuf.hg: Dealt with a TODO comment.

2011-02-01  Murray Cumming  <murrayc@murrayc.com>

	ComboEntryText: Add append(), prepend() and insert().

	* gtk/gtkmm/comboboxentrytext.[h|cc]: Add append(), prepend() and insert() 
	to make this API more like the API in gtkmm, deprecating append_text(), 
	prepend_text() and insert_text(). Note that this whole class is deprecated 
	anyway.

2011-02-01  Murray Cumming  <murrayc@murrayc.com>

	Make sure that all deprecated API is in an ifdef.

	* gdk/src/display.ccg:
	* gdk/src/display.hg:
	* gdk/src/dragcontext.hg:
	* gdk/src/image.hg:
	* gtk/gtkmm/comboboxtext.cc:
	* gtk/src/treemodel.hg: Add ifdefs around all deprecated API, 
	making it easier to avoid using that API.

2011-02-01  Murray Cumming  <murrayc@murrayc.com>

	Gdk::Image: Added get_pixel().

	* gdk/src/image.hg: Added get_pixel(), wrapping 
	gdk_image_get_pixel(), deprecating get_mem() in favour of it.

2011-02-01  Murray Cumming  <murrayc@murrayc.com>

	Regenerated the XML files for the C API documentation.

	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Regenerated with docextract_to_xml.py.

2011-02-01  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Remove : from deprecation documentation.
