@@ -1,3 +1,11 @@
+2011-02-08  Murray Cumming  <murrayc@murrayc.com>
+
+	ComboBoxText, ComboBoxEntryText: Add warning about not confusing these.
+
+	* gtk/gtkmm/comboboxentrytext.h:
+	* gtk/gtkmm/comboboxtext.h: Add a doxygen comment warning people not to 
+	call set_model() on these or to pack more cells in.
+
 2.23.91:
 
 2011-02-02  Murray Cumming  <murrayc@murrayc.com>
